--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ branches:
     - master
 
 before_script:
-  - npm install -g @angular/cli
+  - cd angular-tour-of-heroes
+  - npm install --save-dev @angular/cli@latest
+  - npm install
 
 script:
-  - npm install
   - ng build --env=prod
