--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,12 @@ branches:
 before_script:
   - cd angular-tour-of-heroes
   - npm install --save-dev @angular/cli@latest
+  - npm install -g firebase-tools
   - npm install
 
 script:
   - ng build --env=prod
+  - firebase deploy
+
+after_success:
+  - firebase deploy --token $FIREBASE_TOKEN
